# yolo-rust

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  model.rs  ort_backend.rs  yolo_result.rs
