[package]
name = "yolo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png", "webp-encoder"] }
imageproc = { version = "0.23.0", default-features = false }
ndarray = "0.15.6"
ort = { version = "1.16.3", default-features = false, features = ["load-dynamic", "copy-dylibs", "half"] }
rusttype = { version = "0.9", default-features = false }
anyhow = "1.0.75"
regex = "1.5.4"
rand = "0.8.5"
chrono = "0.4.30"
half = "2.3.1"
dirs = "5.0.1"
ureq = "2.9.1"
tokio = { version = "1.42.0", features = ["full"] }
warp = "0.3.7"
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
